--- a/Website/about.html
+++ b/Website/about.html
@@ -144,10 +144,11 @@
             <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
               <div class="feature-item bg-light rounded text-center p-4">
                 <i class="fa fa-3x fa-mail-bulk text-primary mb-4"></i>
-                <h5 class="mb-3">Digital Marketing</h5>
+                <h5 class="mb-3">Email Marketing</h5>
                 <p class="m-0">
-                  Erat ipsum justo amet duo et elitr dolor, est duo duo eos
-                  lorem sed diam stet diam sed stet lorem.
+                  Enhance your outreach with targeted email campaigns that drive
+                  engagement and conversions. Our strategic approach ensures
+                  your messages resonate with your audience.
                 </p>
               </div>
             </div>
@@ -156,8 +157,9 @@
                 <i class="fa fa-3x fa-search text-primary mb-4"></i>
                 <h5 class="mb-3">SEO & Backlinks</h5>
                 <p class="m-0">
-                  Erat ipsum justo amet duo et elitr dolor, est duo duo eos
-                  lorem sed diam stet diam sed stet lorem.
+                  Boost your online visibility and organic traffic through
+                  effective SEO strategies and quality backlinks. We optimize
+                  your website to rank higher on search engines.
                 </p>
               </div>
             </div>
@@ -166,14 +168,16 @@
                 <i class="fa fa-3x fa-laptop-code text-primary mb-4"></i>
                 <h5 class="mb-3">Design & Development</h5>
                 <p class="m-0">
-                  Erat ipsum justo amet duo et elitr dolor, est duo duo eos
-                  lorem sed diam stet diam sed stet lorem.
+                  Create stunning websites and applications tailored to your
+                  business needs. Our expert developers ensure seamless
+                  functionality and exceptional user experience.
                 </p>
               </div>
             </div>
           </div>
         </div>
       </div>
+
       <!-- Feature End -->
 
       <!-- About Start -->
@@ -183,12 +187,14 @@
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
               <p class="section-title text-secondary">About Us<span></span></p>
               <h1 class="mb-5">
-                #1 Digital solution with 10 years of experience
+                Innovative Digital Solutions for Your Business
               </h1>
               <p class="mb-4">
-                Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos
-                labore. Clita erat ipsum et lorem et sit, sed stet no labore
-                lorem sit clita duo justo eirmod magna dolore erat amet
+                t FreenzaTech, we are dedicated to delivering top-notch digital
+                solutions tailored to your business needs. Our team is
+                passionate about web development, app development, and logo
+                design, combining creativity and technology to help your
+                business thrive in the digital world.
               </p>
               <div class="skill mb-4">
                 <div class="d-flex justify-content-between">
